--- a/src/styles/organizer-edit.less
+++ b/src/styles/organizer-edit.less
@@ -2,3 +2,9 @@
   margin-top: 15px;
   margin-bottom: 15px;
 }
+
+.organizer-address-form {
+  border: 1px solid #ccc;
+  padding: 15px;
+  margin-bottom: 15px;
+}
