--- a/src/event_form/components/place/event-form-place-modal.html
+++ b/src/event_form/components/place/event-form-place-modal.html
@@ -24,9 +24,13 @@
                     </span>
         </div>
         <div class="form-group">
+          <label translate-once="location.zip"></label>
+          <input class="form-control" id="locatie-straat" name="address_postalCode" type="text" ng-model="newPlace.address.postalCode" required>
+        </div>
+        <div class="form-group">
             <label translate-once="location.city"></label>
             <p class="form-control-static" id="waar-locatie-toevoegen-gemeente">
-                <span ng-bind="newPlace.address.postalCode"></span> <span ng-bind="newPlace.address.addressLocality"></span>
+                <span ng-bind="newPlace.address.addressLocality"></span>
                 <span class="text-muted">(<span ng-bind="newPlace.address.addressCountry"></span>)</span>
             </p>
         </div>
