--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -39,12 +39,17 @@
     }
   }
 
-  .title-border {
+  .step-title {
     border-bottom: 1px solid @gray;
-    padding-bottom: 1em;
-    text-transform: uppercase;
-    font-weight: bold;
-    color: @text-color;
+    padding: 10px 0 10px;
+    margin-bottom: 1em;
+
+    h2 {
+      margin: 7px 0 0 0;
+      text-transform: uppercase;
+      font-weight: bold;
+      color: @text-color;
+    }
   }
 
   .theme-refinement {
