--- a/src/event_form/components/organizer-address/organizer-address.html
+++ b/src/event_form/components/organizer-address/organizer-address.html
@@ -65,18 +65,22 @@
         </div>
         <div class="col-xs-6" ng-show="oac.selectedCountry.code == 'NL'">
             <div class="form-group"
-                 ng-class="{'has-error' : oac.streetHasErrors && oac.organizerAddressForm.$submitted}">
+                 ng-class="{'has-error' : oac.zipHasErrors && oac.organizerAddressForm.$submitted}">
                 <label translate-once="organizer.address.zip"></label>
+                <span class="text-muted">bv. 1104CA</span>
                 <input type="text"
                        class="form-control"
-                       name="street"
+                       name="postalCode"
                        placeholder="{{ 'organizer.address.zip' | translate }}"
                        ng-model="oac.address.postalCode"
-                       ng-change="oac.validateAddress()"
-                       ng-model-options="{ updateOn: 'blur' }">
+                       ng-change="oac.validateAddress()">
                 <span class="has-error"
-                      ng-show="oac.streetHasErrors && oac.organizerAddressForm.$submitted">
-                    <span class="help-block" translate-once="organizer.address.help_street"></span>
+                      ng-show="oac.zipHasErrors && oac.organizerAddressForm.$submitted">
+                    <span class="help-block" translate-once="organizer.address.help_zip"></span>
+                </span>
+                <span class="has-error"
+                      ng-show="!oac.zipHasErrors && oac.zipValidateError && oac.organizerAddressForm.$submitted">
+                    <span class="help-block" translate-once="organizer.address.validate_zip"></span>
                 </span>
             </div>
         </div>
