--- a/src/event_form/components/organizer-address/organizer-address.html
+++ b/src/event_form/components/organizer-address/organizer-address.html
@@ -7,6 +7,7 @@
         <select ng-change="oac.changeCountrySelection()"
           ng-options="option.code | translate for option in oac.availableCountries track by option.code"
           ng-model="oac.selectedCountry"
+          ng-show="oac.availableCountries.length > 1"
           class="form-control">
         </select>
       </div>
