III-2620 limit characters in description field for uploading image

--- a/src/event_form/components/image-upload/event-form-image-upload.html
+++ b/src/event_form/components/image-upload/event-form-image-upload.html
@@ -30,9 +30,10 @@
         <p class="help-block" translate-once="images.upload.max_filesize" translate-values="{ maxFileSize: '{{maxFileSize}}' }"></p>
       </div>
 
-      <div class="form-group">
+      <div class="form-group" ng-class="{ 'has-error': description.length > 250 }">
         <label><span translate-once="images.description"></span> <strong class="text-danger">*</strong></label>
         <input type="text" class="form-control" ng-model="description" required>
+        <p class="help-block" translate-once="images.description_help"></p>
       </div>
 
       <div class="form-group">
