III-2620 limit description characters in update image modal

--- a/src/event_form/components/image-edit/event-form-image-edit.html
+++ b/src/event_form/components/image-edit/event-form-image-edit.html
@@ -8,7 +8,7 @@
   <div class="modal-body">
 
     <div>
-      <div class="form-group">
+      <div class="form-group" ng-class="{ 'has-error': description.length > 250 }">
         <label><span translate-once="images.description"></span> <strong class="text-danger">*</strong></label>
         <input type="text" class="form-control" ng-model="description" required>
         <p class="help-block" translate-once="images.edit.description_help"></p>
