--- a/src/dashboard/components/dashboard-item.directive.html
+++ b/src/dashboard/components/dashboard-item.directive.html
@@ -1,4 +1,4 @@
-<td>
+<td ng-class="{past: offerCtrl.offerExpired}">
   <strong>
     <a ng-href="{{ event.url  + '/preview' }}" ng-bind="::event.name"></a>
   </strong>
@@ -15,7 +15,7 @@
   </small>
 </td>
 
-<td ng-if="!offerCtrl.fetching">
+<td ng-if="!offerCtrl.fetching" ng-class="{past: offerCtrl.offerExpired}">
   <span ng-if="::!offerCtrl.offerExpired">
     <div class="pull-right btn-group" uib-dropdown>
       <a class="btn btn-default" ng-href="{{ event.url + '/edit' }}" translate-once="dashboard.directive.edit"></a>
