--- a/src/management/moderation/components/moderation-summary/moderation-summary.html
+++ b/src/management/moderation/components/moderation-summary/moderation-summary.html
@@ -33,7 +33,14 @@
         </div>
     </div>
     <footer class="row" ng-hide="moc.loading">
-        <div class="col-md-6">Toegevoegd door {{moc.offer.creator}}</div>
+        <div class="col-md-6">Toegevoegd door
+            <span ng-if="::!moc.isGodUser">
+                <span ng-bind="moc.offer.creator"></span>
+            </span>
+            <span ng-if="::moc.isGodUser">
+                <a href="{{ moc.uitId + moc.offer.creator }}"><span ng-bind="moc.offer.creator"></span></a>
+            </span>
+        </div>
         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 text-right">
             <udb-moderation-offer offer-id="{{moc.offerId}}" continue="false"></udb-moderation-offer>
         </div>
