III-2949 - added translations of notifications sections in the left menu

--- a/src/entry/logging/job-log.component.html
+++ b/src/entry/logging/job-log.component.html
@@ -14,7 +14,7 @@
   <div class="row">
     <div class="col-sm-12">
       <div class="udb-job-block udb-job-block-ready">
-        <p class="udb-job-title">Geëxporteerde documenten</p>
+        <p class="udb-job-title" translate-once="entry.exported_documents"></p>
         <ul class="list-unstyled udb-job-messages">
           <li class="udb-alert repeat-animation" ng-repeat="job in logger.getFinishedExportJobs()">
             <udb-job></udb-job>
@@ -23,7 +23,7 @@
       </div>
 
       <div class="udb-job-block udb-job-block-errors">
-        <p class="udb-job-title">Meldingen <span class="badge" ng-bind="logger.getFailedJobs().length"></span></p>
+        <p class="udb-job-title" translate-once="entry.notifications"> <span class="badge" ng-bind="logger.getFailedJobs().length"></span></p>
         <ul class="list-unstyled udb-job-messages">
           <li class="udb-alert repeat-animation" ng-repeat="job in logger.getFailedJobs()">
             <udb-job></udb-job>
@@ -32,7 +32,7 @@
       </div>
 
       <div class="udb-job-block udb-job-block-pending">
-        <p class="udb-job-title">Bezig</p>
+        <p class="udb-job-title" translate="entry.in_progress"></p>
         <ul class="list-unstyled udb-job-messages">
           <li class="udb-alert repeat-animation" ng-repeat="job in logger.getQueuedJobs()">
             <udb-job></udb-job>
