:art: added styling for the age-range span in the age buttons

--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -860,3 +860,13 @@ form.booking-period {
     font-size: small;
   }
 }
+
+.form-age-range-button {
+  margin-bottom: 10px;
+
+  span{
+    font-size: small;
+    color: grey;
+    font-weight: 300;
+  }
+}
