--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -862,11 +862,18 @@ form.booking-period {
 }
 
 .form-age-range-button {
-  margin-bottom: 10px;
+  margin-bottom: 0.2em;
+  color: #333333;
 
   span{
     font-size: small;
     color: grey;
     font-weight: 300;
+  }
+}
+
+#form-age {
+  .form-group{
+    margin-bottom: 0.5em;
   }
 }
